--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.13",
     "date-fns": "^4.1.0",
+    "github-markdown-css": "^5.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.13"
